--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,6 +26,8 @@ MinimumiOSVersion=IOS_8
 bSmoothFrameRate=False
 bUseFixedFrameRate=False
 FixedFrameRate=60.000000
+MinDesiredFrameRate=30.000000
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=62.000000))
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -71,5 +73,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
