--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Visual Studio 2015 user specific files
 .vs/
+# Visual Studio 2015 user specific files
+.vs/
 
 # Visual Studio 2015 database file
 *.VC.db
@@ -50,6 +52,7 @@ SourceArt/**/*.tga
 
 # Binary Files
 Binaries/*
+Plugins/*/Binaries/*
 
 # Builds
 Build/*
@@ -70,6 +73,7 @@ Saved/*
 
 # Compiled source files for the engine to use
 Intermediate/*
+Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
