Fixed terrain crahses
Fixed a bug that made chunk update sistem to fail and cause holes between in terrain.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -35,6 +35,9 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -75,4 +78,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
 
