--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,6 +28,7 @@ bUseFixedFrameRate=False
 FixedFrameRate=30.000000
 MinDesiredFrameRate=30.000000
 SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=200.000000))
+GameSingletonClassName=/Game/GameBP/WorldData.WorldData_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -78,5 +79,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
